Fixed Fish animations, more fish